--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="buttons">
             <button id="yes">Yes🥰</button>
 
-            <div class="btn-div"> <button id="no">No🥵</button></div>
+            <div class="btn-div"> <button id="no">No😭</button></div>
            
         </div>
     </div>
